--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 h1{
-	color: red;
+	background-image: url(background.jpg);
+	text-align: center;
+}
+
+img{
+	width:10%;
+	height:auto;
+	float: left;
+	border-radius: 25px;
+}
+p{
+	
+	font-size: 22px;
 }
